# mesh_h3d

./: README.md  blender_clean.py.py
converter/: CMakeLists.txt
converter/include/: Config.hpp  File.hpp  Math.hpp  Utils.hpp  pch.h
converter/src/: Animation.cpp  Animation.hpp  File.cpp  Utils.cpp  main.cpp
io_scene_h3d/: __init__.py  core.py  h3d_export.py  h3d_import.py
object_material_join/: __init__.py
